--- a/package.json
+++ b/package.json
@@ -5,16 +5,18 @@
   "devDependencies": {
     "autoprefixer-stylus": "^0.13.0",
     "concurrently": "^3.1.0",
-    "react-scripts": "0.8.5",
+    "react-scripts": "^3.4.1",
     "stylus": "^0.54.5"
   },
   "dependencies": {
+    "@ant-design/colors": "^4.0.0",
+    "@ant-design/icons": "^4.2.1",
+    "antd": "^4.3.3",
     "history": "^4.5.0",
-    "material-ui": "^0.16.6",
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2",
-    "react-router-dom": "4.0.0-beta.3",
-    "react-tap-event-plugin": "^2.0.1"
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0",
+    "styled-components": "^5.1.1"
   },
   "repository": {
     "type": "git",
@@ -28,5 +30,17 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
